# Formal_Course-selection-management-system

./: .gitignore  CMakeLists.txt  FIXES.md  LICENSE  README.md  SPDLOG_REMOVAL.md  add_license_headers.sh  test_script.exp
data/: Chinese.json  English.json  courses.json  enrollment.json  users.json
docs/: api.md  directory_structure.md  require.md  system_arch.md  user_regulation.md  view_class.md
include/: GPLV3_LICENSE_HEADER.h  pch.h
include/manager/: CourseManager.h  EnrollmentManager.h  UserManager.h
include/model/: Course.h  Enrollment.h  User.h
include/system/: CourseSystem.h  LockGuard.h  SystemException.h
include/util/: DataManager.h  I18nManager.h  InputValidator.h  Logger.h  TestUtils.h
src/: main.cpp  pch.cpp
src/manager/: CourseManager.cpp  EnrollmentManager.cpp  UserManager.cpp
src/model/: Course.cpp  Enrollment.cpp  User.cpp
src/system/: CourseSystem.cpp  LockGuard.cpp  SystemException.cpp
src/util/: DataManager.cpp  I18nManager.cpp  InputValidator.cpp  Logger.cpp
tests/: CMakeLists.txt  test_pch.cpp  test_pch.h
tests/integration/: SystemIntegrationTest.cpp
tests/unit/: ConcurrencyTest.cpp  CourseTest.cpp  EnrollmentTest.cpp  ManagerTest.cpp  SystemTest.cpp  UserTest.cpp  UtilTest.cpp
~/proj_des_formal/: FIXES.md  SPDLOG_REMOVAL.md  test_script.exp
